# CFrame

./: .gitignore  CFrame.cmake  CMakeLists.txt  README.md
docker/cframe/: README.md  container-build-sample  container-run-sample  cppdev.docker  docker-compose.yml  host-build-sample  host-run-sample  options
docs/: CMakeLists.txt  License.md  Manual.md  QuickStart.md  ReferenceGuide.md  SubsystemsOverview.md  TODO.md
libs/: CMakeLists.txt
libs/cframe/: CMakeLists.txt
libs/cframe/version/: CMakeLists.txt  VersionInfo.cpp  VersionInfo.hpp  cframeVersionAPI.h
share/cframe/modules/: CFrameBuildFunctions.cmake  CFrameC++Configuration.cmake  CFrameCompilerInfo.cmake  CFrameExternalLibraries.cmake  CFrameGeneralConfiguration.cmake  CFrameGitInfo.cmake  CFrameInstallFunctions.cmake  CFrameLibraryLoader.cmake  CFrameMathLibrary.cmake  CFramePlatformFlags.cmake  CFrameProductVersion.cmake  CFrameSystemInfo.cmake
share/cframe/modules/detail/: CFrameCompilerInfo-Windows.cmake  CFrameSystemInfo-Linux.cmake  CFrameSystemInfo-Windows.cmake  VersionTemplate.cpp.in  VersionTemplate.hpp.in
share/cframe/scripts/: CFrameBuildFunctions.cmake
share/samples/qtosgboost/: CMakeLists.txt  README.md  qtosgboost.cpp  qtosgboost.hpp  qtosgboostapi.h  qtosgboostviewer.cpp  testPattern-1024x512.rgb  testPattern-1024x512.rgb.attr  testSphere.osg
source/cframe/: CFrameDirectoryUtilities.cmake  CFrameDirectoryUtils.cmake  CFrameGeneralConfiguration.cmake  CFrameIncludeCFrameSource.cmake  CFrameInitialize.cmake  CFrameInternal.cmake  CFrameListUtilities.cmake  CFrameMessage.cmake  CFrameModuleTraversal.cmake  CFramePolicies.cmake  CFrameProjectTraversal.cmake  CFrameProjects.cmake  CFrameSetupExternals.cmake  CFrameSystemInfo.cmake
